# oceanside

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
merge/: merge.py  requirements.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  croc.rs  lib.rs  main.rs
src-tauri/src/audio/: beep.rs  capture.rs  mod.rs  writer.rs
src/components/: MicTestWidget.tsx
src/lib/: firebase.ts  tauri.ts
src/screens/: Home.tsx  HostSession.tsx  JoinSession.tsx  MicTest.tsx  PostSession.tsx  Recording.tsx
src/stores/: recording.ts  session.ts
