[package]
name = "voice-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "voice_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voice-sync"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
which = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
